--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -67,12 +67,11 @@
 
         </div>
       </form>
-
-
     </li>
     <li class="divider show-for-small"></li>
+    <li class=""><%= link_to "Your Invitations", user_trips_index_path %></li>
 
-
+    <li class="divider show-for-small"></li>
     <li class="has-dropdown"><a href="#">Account</a>
       <ul class="dropdown">
         <li><%= link_to "Profile", current_user %></li>
