--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,6 +79,12 @@
   </div>
 
 
+  <div id="loadeer">
+    <%=image_tag "ajax-loader.gif", class:"ajax-loader" %>
+  </div>
+
+
+
   <script>
 
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -94,6 +100,8 @@
       ga('create', 'UA-48586820-1', 'explorebee.com');
 
       ga('send', 'pageview');
+
+
 
 
 
