--- a/app/views/user_trips/index.html.erb
+++ b/app/views/user_trips/index.html.erb
@@ -94,7 +94,10 @@
 <%else%>
     <div class="row panel">
       <div class="large-12 columns">
-    <h3> Hi <%=current_user.name %>, if you have become a trusted member then please create the trips at <strong><%= link_to "Make A Trip", new_trip_path,class: "button" %></strong></h3>
+    <h3> Hi <%=current_user.name %>, if you have become a trusted member then please create the trips at
+      <strong><%#= link_to "Make A Trip", new_trip_path,class: "button" %>
+        <button onclick="javascript:window.location = '/trips/new';"  class="button"> Make a Trip</button>
+      </strong></h3>
       </div>
     </div>
 <% end %>
