--- a/app/views/users_signed/_signed.html.erb
+++ b/app/views/users_signed/_signed.html.erb
@@ -39,10 +39,10 @@
 
 
 
-    <h4 class="push-3">
+    <h4 class="">
       <%= current_user.name %>
     </h4>
-    <%= link_to "view my profile", current_user %><br>
+    <%= link_to "view my profile", current_user %><br><br>
     <button class="button tiny" data-reveal-id="changePicAttachment">change Pic</button>
     <!-- removed cause of the performance -->
     <%#= render 'shared/stats' %>
