--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -118,21 +118,8 @@ div {
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 }
 
-.btn-facebook:hover,
-.btn-facebook:focus,
-.btn-facebook:active,
-.btn-facebook.active,
-.btn-facebook.disabled,
-.btn-facebook[disabled] {
-  color: #ffffff;
-  background-color: #133783;
-  *background-color: #102e6d;
-}
 
-.btn-facebook:active,
-.btn-facebook.active {
-  background-color: #0d2456 \9;
-}
+
 
 
 #screencast-view-container {
@@ -212,4 +199,33 @@ ul.ui-autocomplete {
 
 a {
   text-decoration: none;
+}
+
+
+//This is for loading gif image
+
+#loader {
+  position:absolute;
+  top:700%;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:1000;
+  //background-color:white;
+  opacity: .8;
+}
+
+.ajax-loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -32px; /* -1 * image width / 2 */
+  margin-top: -32px;  /* -1 * image height / 2 */
+  display: block;
+}
+
+
+a:visited {
+  //text-decoration: none;
+  color: white;
 }
