--- a/app/views/static_pages/_unsigned.html.erb
+++ b/app/views/static_pages/_unsigned.html.erb
@@ -15,8 +15,12 @@
         <!-- This is the sign up part-->
         <div class="large-4 columns push-2">
 
-            <%= link_to "Login With Facebook","/auth/facebook",class:" button btn-facebook push-1" %>
-            <%#= link_to "Linked In","/auth/linkedin",class:"btn btn-large  btn-linkedin" %>
+           <!-- <%= link_to "Login With Facebook","/auth/facebook",class:" button btn-facebook push-1" %>
+
+          <button onclick="window.navigate('/auth/facebook')" class="button btn-facebook push-1">Login With Facebook </button>-->
+          <button onclick="javascript:window.location = '/auth/facebook';"  class="button btn-facebook push-1"> Login With Facebook</button>
+
+          <%#= link_to "Linked In","/auth/linkedin",class:"btn btn-large  btn-linkedin" %>
             <%#= link_to "Twitter","#",class:"btn-large  btn-twitter" %>
 
 
