--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+
 
 <div class="row">
-  <div class="span6 offset3">
+  <div class="large-6 columns">
+    <h1>Sign up</h1>
     <%= form_for(@user) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
 
@@ -18,7 +19,7 @@
         <%= f.label :password_confirmation, "Confirmation" %>
         <%= f.password_field :password_confirmation %>
 
-        <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+        <%= f.submit "Create my account", class: "button large" %>
     <% end %>
   </div>
 </div>
