--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -82,7 +82,7 @@
 
           <%= image_tag @u.image_url(:small).to_s ,width:"50px",height:"50px" ,class: "th" if @u %>
           <br>
-          <p class="push-1"><%= @u.name %></p>
+          <p class="push-1"><%= @u.name if @u %></p>
         </div>
 
         <div class="large-11 columns">
