--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -82,6 +82,9 @@
 
           <%= image_tag @u.image_url(:small).to_s ,width:"50px",height:"50px" ,class: "th" if @u %>
           <br>
+
+          <!-- I have added this -->
+
           <p class="push-1"><%= @u.name if @u %></p>
         </div>
 
