--- a/app/assets/stylesheets/masonry.css
+++ b/app/assets/stylesheets/masonry.css
@@ -1,8 +1,8 @@
-.fullscreen-img {
+.header {
     display:block;z-index:1;
     min-width:100%;
     min-height:100%;
-    background:transparent url('/background.jpg') center center no-repeat;
+    background:transparent url('back.jpeg') repeat scroll;
     background-size:cover;
 }
 
@@ -39,7 +39,7 @@
 .col5 img { max-width: 480px; }
 
 .box {
-    background: none repeat scroll #EFEDC8;
+    background: none repeat scroll rgba(255, 224, 183, 0.51);
     border-radius: 5px;
     float: left;
     font-size: 11px;
@@ -55,7 +55,7 @@
 }
 
 .masonry_box {
-    background: none repeat scroll 0 0 #EFED8B;
+    background: none repeat scroll 0 0 rgba(255, 224, 183, 0.51);
     border-radius: 5px;
     float: left;
     font-size: 11px;
