--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,19 +1,34 @@
+<nav class="top-bar bottom-bar">
+  <section class="top-bar-section">
 
+    <ul class="">
 
-  <div class="navbar-fixed-bottom">
-    <footer class="footer">
-  <small>
-    <a href="#">Prototype App</a>
-  </small>
-  <nav>
-    <ul>
-      <li><%= link_to "About",  about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="#">Just A Link</a></li>
+      <li class="divider"></li>
+      <li><%= link_to "About Us",  about_path %></li>
+      <li class="divider"></li>
+      <li><%= link_to "Contact Us", contact_path %></li>
+      <li class="divider"></li>
+
     </ul>
-  </nav>
 
-    </footer>
+    </section>
+</nav>
+
+
+
+
+<!--
+
+<div class="large-12 columns bottom-bar panel">
+  <div class="large-3 columns">&nbsp</div>
+  <div class="large-6 columns">
+
+   <%#= link_to "About",  about_path %>
+
+    <%#= link_to "Contact", contact_path %>
+
+
+  </div>
+  <div class="large-3 columns">&nbsp</div>
 </div>
-
-
+-->
