--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,4 @@
+<div class="fixed">
 <nav class="top-bar" data-topbar>
 <ul class="title-area">
   <!-- Title Area -->
@@ -96,7 +97,7 @@
             </div>
 
             <div class="large-2 columns right">
-                <li><%= f.text_field :email, placeholder:"Email" ,class:"radius" %> </li>
+                <li><%= f.email_field :email, placeholder:"Email" ,class:"radius" %> </li>
             </div>
         <% end %>
       </ul>
@@ -106,6 +107,6 @@
 </section>
 </nav>
 
-
+</div>
 
 
