--- a/app/views/shared/_user_signup.html.erb
+++ b/app/views/shared/_user_signup.html.erb
@@ -7,16 +7,17 @@
         <%= f.text_field :name,placeholder:"Your Name"%>
 
 
-        <%= f.text_field :email,placeholder:"Your Email"%>
+        <%#= f.text_field :email,placeholder:"Your Email"%>
+        <input id="user_email" type="email" placeholder="Your Email" name="user[email]" required>
 
+        <%#= f.password_field :password ,placeholder:"Your Password"%>
+         <input id="user_password" type="password" placeholder="Password (Min 6 letters)" name="user[password]">
 
-        <%= f.password_field :password ,placeholder:"Your Password"%>
-
-
-        <%= f.password_field :password_confirmation ,placeholder:"Your Password Again"%>
-
+        <%#= f.password_field :password_confirmation ,placeholder:"Your Password Again"%>
+        <input id="user_password_confirmation" type="password" placeholder="Your Password Again" name="user[password_confirmation]" required data-equalto="password">
         <%#= f.file_field :image,placeholder:"upload your photo",class:"button" %>
 
 
-        <div><%= f.submit "Create my account", class: "button radius "  %></div>
+        <%#= f.submit "Create my account", class: "button radius "  %>
+        <input class="button radius " type="submit" value="Create my account" name="commit">
     <% end %>
