modified front end

--- a/app/views/shared/_user_signup.html.erb
+++ b/app/views/shared/_user_signup.html.erb
@@ -11,7 +11,7 @@
         <input id="user_email" type="email" placeholder="Your Email" name="user[email]" required>
 
         <%#= f.password_field :password ,placeholder:"Your Password"%>
-         <input id="user_password" type="password" placeholder="Password (Min 6 letters)" name="user[password]">
+         <input id="user_password" type="password" placeholder="Password (Minimum 6 characters required)" name="user[password]">
 
         <%#= f.password_field :password_confirmation ,placeholder:"Your Password Again"%>
         <input id="user_password_confirmation" type="password" placeholder="Your Password Again" name="user[password_confirmation]" required data-equalto="password">
