--- a/app/views/users_signed/_signed.html.erb
+++ b/app/views/users_signed/_signed.html.erb
@@ -449,7 +449,7 @@
   <div class="feedback fixed text-right">
 
     <%#=image_tag("feed_back.png") %>
-    <%=link_to image_tag("feed_back.png"),new_feed_back_path %>
+    <%=link_to image_tag("feed_back.png",height:"70px",width:"70px"),new_feed_back_path %>
   </div>
 
 
