--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -252,6 +252,10 @@ a:visited {
 
 
 .panel {
-  background-image:url('background.png');
+  background-image:url('background.gif');
   background-repeat:repeat;
+
+
 }
+
+
