--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,9 @@
     <!--<script src="/assets/angular.js?body=1"></script>-->
 
 <!--    <script src="/assets/minifiedProduction/MinifiedApp.js?body=1"></script>-->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//cdn.jsdelivr.net/tinymce/4.0b2/jquery/jquery.tinymce.min.js"    type="text/javascript"></script>
+
   </head>
   <body ng-app="myApp" ng-cloak>
 
@@ -111,6 +113,7 @@
 
   </script>
   <%#= render 'layouts/footer' %>
-
+  <!--<script type="text/javascript" src="http://tinymce.moxiecode.com/js/tinymce/jscripts/tiny_mce/tiny_mce.js"></script>-->
+  <%= tinymce  %>
   </body>
 </html>
