--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -1,3 +1,7 @@
+
+
+<div class="row ">
+  <div class="large-12 columns">
 <%= form_for(@place) do |f| %>
   <% if @place.errors.any? %>
     <div id="error_explanation">
@@ -17,13 +21,14 @@
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description ,:class=>"tinymce", :rows=>30, :cols=>40%>
   </div>
 
 
     <div class="field">
       <%= f.label :detail_description %><br>
-      <%= f.text_area :detail_description %>
+
+      <%= f.text_area :detail_description ,:class=>"tinymce", :rows=>30, :cols=>40 %>
     </div>
 
 
@@ -38,10 +43,13 @@
 
     <div class="field">
       <%= f.label :caption %><br>
-      <%= f.text_field :caption, :placeholder=>"caption for photo" %>
+      <%= f.text_field :caption, :placeholder=>"caption for photo"%>
     </div>
 
     <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+  </div>
+
+</div>
