--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="large-12 columns">
 <%= form_for(@post) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
@@ -17,12 +19,12 @@
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description ,:class=>"tinymce", :rows=>30, :cols=>40%>
   </div>
 
     <div class="field">
       <%= f.label :detail_description %><br>
-      <%= f.text_area :detail_description %>
+      <%= f.text_area :detail_description ,:class=>"tinymce", :rows=>30, :cols=>40 %>
     </div>
 
   <div class="field">
@@ -43,3 +45,5 @@
     <%= f.submit %>
   </div>
 <% end %>
+  </div>
+</div>
