added phto upload to tinymce

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -250,6 +250,22 @@ a:visited {
 
 }
 
+.footer {
+  color: white;
+
+
+  a:hover {
+    text-decoration: none;
+    background-color: #5D230B;
+    color: white;
+  }
+
+
+  a:visited {
+    color: white;
+  }
+
+}
 
 
 
