--- a/app/assets/stylesheets/masonry.css
+++ b/app/assets/stylesheets/masonry.css
@@ -2,8 +2,10 @@
     display:block;z-index:1;
     min-width:100%;
     min-height:100%;
-    background:transparent url('back.jpeg') repeat scroll;
+    background:transparent url('back2.png') repeat scroll;
     background-size:cover;
+    /*background-color: #000000;*/
+
 }
 
 #masonry-container {
