--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,8 +112,8 @@
 
 
   </script>
-  <%#= render 'layouts/footer' %>
+  <%= render 'layouts/footer' %>
   <!--<script type="text/javascript" src="http://tinymce.moxiecode.com/js/tinymce/jscripts/tiny_mce/tiny_mce.js"></script>-->
-  <%= tinymce  %>
+
   </body>
 </html>
