--- a/app/views/shared/_user_signup.html.erb
+++ b/app/views/shared/_user_signup.html.erb
@@ -19,5 +19,5 @@
 
 
         <%#= f.submit "Create my account", class: "button radius "  %>
-        <input class="button radius " type="submit" value="Create my account" name="commit">
+        <input class="button radius push-2" type="submit" value="Create my account" name="commit">
     <% end %>
