--- a/app/views/static_pages/_unsigned.html.erb
+++ b/app/views/static_pages/_unsigned.html.erb
@@ -137,7 +137,7 @@
              </a>
            </div>
            <div class="panel">
-             <%= place.description %>
+             <%=raw place.description %>
            </div>
          </div>
 
