--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,4 @@
+<!--
 <nav class="top-bar bottom-bar">
   <section class="top-bar-section">
 
@@ -16,6 +17,7 @@
 
 
 
+-->
 
 <!--
 
@@ -32,3 +34,25 @@
   <div class="large-3 columns">&nbsp</div>
 </div>
 -->
+
+<footer >
+  <div class="top-bar footer">
+       <div class="text-center">
+
+        <nav>
+
+          <ul>
+         <li><%= link_to "Contact Us", contact_path %> &nbsp;|&nbsp; <%= link_to "About Us",about_path%> &nbsp;|&nbsp;<%=link_to "Give Us Feedback",new_feed_back_path %></li>
+
+
+
+
+        <li>Explorebee &copy; 2014</li>
+
+          </ul>
+       </nav>
+        </div>
+
+  </div>
+
+</footer>
