--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -1,6 +1,5 @@
-
-
-<div class="row ">
+<div ng-controller="PlaceModController">
+<div class="row">
   <div class="large-12 columns">
 <%= form_for(@place) do |f| %>
   <% if @place.errors.any? %>
@@ -24,13 +23,14 @@
     <%= f.text_area :description ,:class=>"tinymce", :rows=>30, :cols=>40%>
   </div>
 
-
+    <div ng-click = "actionEdit()">
     <div class="field">
       <%= f.label :detail_description %><br>
 
       <%= f.text_area :detail_description ,:class=>"tinymce", :rows=>30, :cols=>40 %>
-    </div>
 
+    </div>
+    </div>
 
     <div class="field">
       <%= f.label :interest_tokens, "Interest" %><br/>
@@ -51,5 +51,29 @@
   </div>
 <% end %>
   </div>
+
+</div>
+
+
+
+<script src="/assets/tinymce/preinit.js?body=1"></script>
+<script src="/assets/tinymce/tinymce.jquery.js?body=1"></script>
+<script src="/assets/tinymce/jquery.tinymce.js?body=1"></script>
+<script src="/assets/tinymce-jquery.js?body=1"></script>
+
+
+<script type="text/javascript">
+
+
+    tinyMCE.init({
+        mode: 'textareas',
+
+        plugins: "uploadimage"
+    });
+
+
+</script>
+
+
 
 </div>
