--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -56,10 +56,7 @@
 
 
 
-<script src="/assets/tinymce/preinit.js?body=1"></script>
-<script src="/assets/tinymce/tinymce.jquery.js?body=1"></script>
-<script src="/assets/tinymce/jquery.tinymce.js?body=1"></script>
-<script src="/assets/tinymce-jquery.js?body=1"></script>
+<%= javascript_include_tag "tinymce-jquery" %>
 
 
 <script type="text/javascript">
