--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,7 +112,21 @@
 
 
   </script>
-  <%= render 'layouts/footer' %>
+  <%= javascript_include_tag "tinymce-jquery" %>
+
+
+  <script type="text/javascript">
+
+
+      tinyMCE.init({
+          mode: 'textareas',
+          plugins: "uploadimage"
+      });
+
+
+  </script>
+
+  <%= render 'layouts/footer' unless signed_in? %>
   <!--<script type="text/javascript" src="http://tinymce.moxiecode.com/js/tinymce/jscripts/tiny_mce/tiny_mce.js"></script>-->
 
   </body>
