--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -56,6 +56,17 @@
 
 
 
+<%= javascript_include_tag "tinymce-jquery" %>
 
+<script type="text/javascript">
+
+
+    tinyMCE.init({
+        mode: 'textareas',
+        plugins: "uploadimage"
+    });
+
+
+</script>
 
 
